--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+
+  "homepage": "https://hh-beep.github.io/Logo-Idea-2/#/",
+
   "name": "logo-idea-2",
   "version": "0.1.0",
   "private": true,
@@ -8,10 +11,15 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
